[package]
name = "signaldb-bin"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "signaldb"
path = "src/main.rs"

[dependencies]
# Only include the necessary service dependencies
acceptor = { path = "../acceptor" }
common = { path = "../common" }
router = { path = "../router" }
writer = { path = "../writer" }

# Essential external dependencies
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tonic.workspace = true
arrow-flight.workspace = true
log.workspace = true

[dev-dependencies]
cargo-husky.workspace = true

[package.metadata.cargo-machete]
# cargo-husky is used for git hooks configuration
ignored = ["cargo-husky"]