[package]
name = "signaldb-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
signaldb-sdk.workspace = true
clap.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde_json.workspace = true
anyhow.workspace = true

[[bin]]
name = "signaldb-cli"
path = "src/main.rs"
