[package]
name = "signaldb-cli"
version = "0.1.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
signaldb-sdk.workspace = true
common.workspace = true
clap.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde_json.workspace = true
anyhow.workspace = true
arrow.workspace = true
arrow-flight.workspace = true
tonic.workspace = true
futures.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tui-tree-widget.workspace = true
thiserror.workspace = true
chrono.workspace = true

[[bin]]
name = "signaldb-cli"
path = "src/main.rs"

[dev-dependencies]
insta = "1.46"
mockito = "1.7"
tokio = { workspace = true, features = ["test-util"] }

[package.metadata.cargo-machete]
ignored = ["ratatui", "crossterm", "tui-tree-widget", "insta", "mockito"]
