[package]
name = "tempo-api"
description = "Grafana Tempo API models"
version = "0.2.0"
edition.workspace = true
license = "Apache-2.0"
publish = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true

prost.workspace = true

tonic.workspace = true

[build-dependencies]
prost-build.workspace = true
tonic-build = { workspace = true, features = ["prost"] }

[features]
default = []
client = []
server = []

[package.metadata.cargo-machete]
ignored = ["prost-build", "tonic-build"]
