[package]
name = "tempo-api"
description = "Grafana Tempo API models"
version = "0.1.1"
edition.workspace = true
license = "Apache-2.0"
publish = true

[dependencies]
serde.workspace = true
serde_json.workspace = true

prost.workspace = true

tonic.workspace = true
tonic-prost.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true

[features]
default = []
client = []
server = []

[package.metadata.cargo-machete]
ignored = ["tonic-prost-build"]
