[package]
name = "writer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
benchmarks = ["dep:criterion", "dep:rand"]

[dependencies]
common.workspace = true

datafusion.workspace = true
arrow-flight.workspace = true
object_store.workspace = true

# Iceberg table format support
iceberg-rust.workspace = true
datafusion_iceberg.workspace = true

tokio.workspace = true
futures.workspace = true

log.workspace = true
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true

tracing.workspace = true

uuid.workspace = true
bytes.workspace = true
tonic.workspace = true
tempfile.workspace = true
chrono.workspace = true
hex.workspace = true
serde_json.workspace = true

# Optional dependencies for benchmarks
criterion = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

[[bin]]
name = "signaldb-writer"
path = "src/main.rs"

[[bench]]
name = "iceberg_benchmarks"
harness = false
required-features = ["benchmarks"]

[[bench]]
name = "connection_pool_benchmarks"
harness = false
required-features = ["benchmarks"]

[dev-dependencies]
tokio-stream.workspace = true

[package.metadata.cargo-machete]
# async-trait is used by the trait implementations
ignored = ["async-trait", "tracing", "tokio-stream"]
