[package]
name = "signaldb-grafana-datasource"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "gpx_signaldb_datasource"
path = "src/main.rs"

[dependencies]
# Grafana Plugin SDK for Rust
# Git pin: 0.5.0 (crates.io) still uses tonic 0.12/prost 0.13/arrow2; main has the
# tonic 0.14 + arrow migration but is unreleased. Drop the pin once 0.6.0 ships.
grafana-plugin-sdk = { git = "https://github.com/grafana/grafana-plugin-sdk-rust", rev = "0788a84b5e32cff8b59631f33d74ca67de3d31ef" }

# Async runtime
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Flight client
arrow-flight = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }

# Arrow data handling
datafusion = { workspace = true }
